# app-lens

./: .editorconfig  .env.example  .gitignore  Caddyfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  config.py  main.py
backend/app/auth/: github_oauth.py
backend/app/db/: base.py  models.py
backend/app/routes/: auth.py  chat.py  graph.py  nlq.py  repos.py  scan.py
docs/: README.md  architecture.md  quickstart.md
frontend/: .dockerignore  Dockerfile  README.md
infra/: README.md
scripts/: README.md  bootstrap  db-setup  logs  start  stop
