[tool.poetry]
name = "applens-backend"
version = "0.1.0"
description = "AppLens Backend — Microservice Dependency Visualization"
authors = ["AppLens Team"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.30.0"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
crewai = "^0.100.0"
langchain = "^0.3.0"
langchain-openai = "^0.3.0"
openai = "^1.65.0"
pgvector = "^0.3.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
greenlet = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
black = "^24.0.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
